gateway/demo-gw.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-ingress-gateway
  namespace: demo
spec:
  selector:
    istio: mydomainio-ingressgateway 
  servers:
  - port:
      number: 80
      name: http-demo
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - demo.mydomain.io
  - port:
      number: 443
      name: https-demo
      protocol: HTTP
    hosts:
    - demo.mydomain.io
